# Letta-toolselector

./: .coverage  .env.example  .gitignore  ADMIN_DASHBOARD_TOOL_DISPLAY_STATUS.md  AGENTS.md  AGENT_ID_HEADER_FINDINGS.md  AGENT_ID_HEADER_MIGRATION.md  API_CONTRACT.md  CLAUDE.md  COMPOSE_SETUP.md  DEPLOYMENT.md  DYNAMIC_LOOKUP_STATUS.md  DYNAMIC_LOOKUP_SUMMARY.md  Dockerfile  Dockerfile.reranker  EMBEDDINGS_USAGE.md  FRONTEND_BACKEND_CONNECTION_FIX.md  FRONTEND_CONNECTION_ISSUES_ANALYSIS.md  FRONTEND_TOOL_LISTING_ANALYSIS.md  GRAPHITI_EMBEDDING_COMPATIBILITY.md  Implementation_Review_Qwen3.md  LDTS_COMPLETION_SUMMARY.md  LDTS_DASHBOARD_STATUS.md  MISSING_ENDPOINTS_ANALYSIS.md  NEVER_DETACH_PROTECTION.md  PRD_FastAPI_Worker_Service.md  PRD_Qwen3_Embedding_Implementation.md  Qwen3_Reranker_Implementation_Analysis.md  README.md  REFACTORING_PROGRESS_SUMMARY.md  RERANKER_TESTING_DASHBOARD_PRD.md  RETRIEVAL_PIPELINE_TESTING.md  SYSTEM_SETTINGS_ENHANCEMENT_PLAN.md  TESTING_IMPROVEMENTS.md  TEST_COVERAGE_SUMMARY.md  TEST_IMPLEMENTATION_SUMMARY.md  TOOL_SELECTOR_GUIDE.md  WEAVIATE_ANALYSIS.md  WEBHOOK_TOOL_INTEGRATION.md  WORKER_SERVICE_ANALYSIS.md  (+39 more)
.beads/: interactions.jsonl  issues.jsonl  last-touched  sync-state.json
.github/: dependabot.yml
.letta/: settings.json
cost_control_data/: alerts.jsonl  budget_limits.json  (+1 more)
letta-toolkit/: README.md  pyproject.toml
letta-toolkit/docs/: API_REFERENCE.md  EXAMPLES.md  GETTING_STARTED.md  MIGRATION_GUIDE.md
letta-toolkit/src/letta_toolkit/: __init__.py  client.py  config.py  protected.py  tools.py
letta-toolkit/tests/: __init__.py  test_config.py  test_tools.py
(+328 files in other folders)
