[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "letta-toolkit"
version = "0.1.0"
description = "Shared Python toolkit for Letta agent tool management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Oculair Media", email = "dev@oculair.ca" }
]
keywords = ["letta", "agents", "tools", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0",  # For retry logic
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",  # For mocking HTTP requests
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/oculairmedia/lettatoolsselector"
Repository = "https://github.com/oculairmedia/lettatoolsselector"

[tool.hatch.build.targets.wheel]
packages = ["src/letta_toolkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src/letta_toolkit --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
